# CompressedVec

./: Cargo.toml  README.md
benches/: bench1.rs  std_vec.rs
src/: buffered.rs  iter.rs  lib.rs  traits.rs
tests/: buffered_cvec.rs  test.rs
