[package]
name = "compressed_vec"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitpacking = "0.8.4"
byteorder = "1.4.3"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "bench1"
harness = false

[[bench]]
name = "std_vec"
harness = false
